# gitstats

./: .gitignore  README.md  gitstats_cli.py  pyproject.toml
gitstats/: __init__.py  cli.py  display.py  identity.py  identity_cli.py  stats.py
